--- a/client/src/components/Navigation/styles.css
+++ b/client/src/components/Navigation/styles.css
@@ -6,6 +6,7 @@
   
   .nav-title {
     font-family: "Splash", cursive;
+    color:white;
   }
   
   .nav-menu {
@@ -50,3 +51,12 @@
     margin: 2%;
   }
   
+  input[type="submit"] {
+    background-color: #42ddf5;
+    color: white;
+    height: 40px;
+    font-family: Arial;
+    font-size: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
