--- a/client/src/components/Navigation/styles.css
+++ b/client/src/components/Navigation/styles.css
@@ -6,7 +6,8 @@
   
   .nav-title {
     font-family: "Splash", cursive;
-    color:white;
+    color:goldenrod;
+    /* font-family: Brush Script MT, Brush Script Std, cursiv */
   }
   
   .nav-menu {
