added some styling to delete heading

--- a/client/src/components/Portal/styles.css
+++ b/client/src/components/Portal/styles.css
@@ -37,7 +37,7 @@
     font-family: Jazz LET, fantasy;
 }
 
-.port-container {
-    position: relative;
+/* .port-container {
+    position: absolute;
     top:130px;
-}
+} */
