--- a/client/src/components/Navigation/styles.css
+++ b/client/src/components/Navigation/styles.css
@@ -31,11 +31,13 @@
   
   .close-button {
     border: 2px solid white;
-    width: 21px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     border-radius: 30px;
-    padding-top: 2px;
-    text-align: center
+    /* padding: 5px; */
+    /* text-align: center; */
+    color: white
+
   }
   
   .close-button:hover {
@@ -60,4 +62,14 @@
     font-size: 30px;
     margin-top: 10px;
     margin-bottom: 10px;
+  }
+
+  .logout-button{
+    text-decoration: none;
+    color: white;
+    font-family: Arial;
+  }
+
+  .hamburger-menu{
+    color: red;
   }
