add some bootstrap styling

--- a/client/src/components/Portal/styles.css
+++ b/client/src/components/Portal/styles.css
@@ -41,3 +41,8 @@
     position: absolute;
     top:130px;
 } */
+
+.list-group{
+    font-size:15px;
+    font-family:Arial, Helvetica, sans-serif
+}
