--- a/client/src/components/Portal/styles.css
+++ b/client/src/components/Portal/styles.css
@@ -5,7 +5,7 @@
 }
 
 .main-content{
-  background-color:whitesmoke;
+  background-color:wheat;
   min-height:500px;
   border:5px solid goldenrod
  }
