--- a/client/src/components/ExampleCarouselImage/styles.css
+++ b/client/src/components/ExampleCarouselImage/styles.css
@@ -1,6 +1,7 @@
 
 
 .text-style {
-    font-family:Arial, Helvetica, sans-serif
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight:bold
 }    
     
