--- a/client/src/components/ErrorMessages/styles.css
+++ b/client/src/components/ErrorMessages/styles.css
@@ -12,7 +12,7 @@
 .text {
     color: red;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 
