tables for all events and practices works

--- a/client/src/components/Portal/styles.css
+++ b/client/src/components/Portal/styles.css
@@ -37,10 +37,10 @@
     font-family: Jazz LET, fantasy;
 }
 
-/* .port-container {
-    position: absolute;
+.portal-container {
+    position: relative;
     top:130px;
-} */
+}
 
 .list-group{
     font-size:15px;
