--- a/client/src/components/Navigation/styles.css
+++ b/client/src/components/Navigation/styles.css
@@ -1,75 +1,48 @@
 .navigation {
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
     margin: 2%;
   }
   
   .nav-title {
     font-family: "Splash", cursive;
     color:goldenrod;
-    /* font-family: Brush Script MT, Brush Script Std, cursiv */
-  }
+   } 
   
   .nav-menu {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    margin-right: 2px;
+     ;
   }
   
-  .nav-menu a {
-    text-decoration: none;
-    color: white;
-    font-family: Arial;
-  }
-  
+    
   .nav-menu a:hover {
-    color: goldenrod;
+    color: whitesmoke;
   }
   
   .logout-button:hover {
     color:goldenrod;
   }
   
-  .close-button {
-    border: 2px solid white;
-    width: 30px;
-    height: 30px;
-    border-radius: 30px;
-    /* padding: 5px; */
-    /* text-align: center; */
-    color: white
-
-  }
   
-  .close-button:hover {
-    color: rgb(255, 136, 0);
-    border: 2px solid rgb(255, 136, 0);
-  }
-  
-  .nav-menu ul {
-    list-style: none;
-  }
-  
-  .nav-menu li {
-    font-family: Arial;
-    margin: 2%;
-  }
-  
-  input[type="submit"] {
-    background-color: #42ddf5;
-    color: white;
-    height: 40px;
-    font-family: Arial;
-    font-size: 30px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-
   .logout-button{
     text-decoration: none;
     color: white;
     font-family: Arial;
   }
+  
+  .linkStyles  {
+    position: "relative";
+    display: "inline-block";
+    width: "200px";
+    padding: "2px";
+    color:goldenrod; 
+    top:"120px";
+    left:"170px"
+  }  
 
-  .hamburger-menu{
-    color: red;
+  .active-Link {
+    color:whitesmoke;
   }
