--- a/client/src/components/Login/styles.css
+++ b/client/src/components/Login/styles.css
@@ -1,10 +1,8 @@
 .heading {
     position:relative;
     color: goldenrod;
-    right:150px;
+    left:450px;
     top:-100px;
-
-    
 }
 
 .location {
