--- a/client/src/components/Signup/styles.css
+++ b/client/src/components/Signup/styles.css
@@ -32,12 +32,10 @@ label {
      border-radius: 4px;
     
   }
-  
-  .error{
-    color: red;
-  }
-  
-  .heading{
-    text-align: center;
+ 
+  .heading {
+    position:relative;
+    left:550px;
+    top:-10px; 
   }
   
