fixed radio button

--- a/client/src/components/AllPractices/practices.css
+++ b/client/src/components/AllPractices/practices.css
@@ -3,6 +3,7 @@
     position: relative;
     background-color: goldenrod;
     top:150px;
-    border:5px
-
+    border:5px;
+    font-size:medium;
+    font-style: normal;
 }
