--- a/client/src/components/EventRegistration/e_styles.css
+++ b/client/src/components/EventRegistration/e_styles.css
@@ -1,28 +1,17 @@
 .row-no-user{
     position: relative;
-    top:-50px; 
+    top:150px; 
     border: 10px solid goldenrod;
     background-color: wheat;
-    height: 250px;
+    height: 160px;
     width: 500px;
     justify-self: center;
-    left:400px
+    left:400px;
+    text-align:center
 } 
 
 .text {
     color: red;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bolder;
-}
-
-
-.row-not-authorized {
-    position: relative;
-    top:30px; 
-    border: 10px solid goldenrod;
-    background-color: wheat;
-    height: 250px;
-    width: 500px;
-    justify-self: center;
-    left:400px
 }
