--- a/client/src/components/ErrorMessages/error_styles.css
+++ b/client/src/components/ErrorMessages/error_styles.css
@@ -1,4 +1,4 @@
-.row-no-user{
+.errorMessage {
     position: relative;
     top:-50px; 
     border: 10px solid goldenrod;
@@ -9,20 +9,20 @@
     left:400px
 } 
 
-.text {
+.text_error {
     color: red;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bolder;
 }
 
 
-.row-not-authorized {
+/* .row-not-authorized {
     position: relative;
     top:30px; 
     border: 10px solid goldenrod;
     background-color: wheat;
-    height: 150px;
+    height: 190px;
     width: 500px;
     justify-self: center;
     left:400px
-}
+} */
