--- a/client/src/components/ErrorMessages/error_styles.css
+++ b/client/src/components/ErrorMessages/error_styles.css
@@ -16,13 +16,13 @@
 }
 
 
-/* .row-not-authorized {
+.row-not-authorized {
     position: relative;
     top:30px; 
     border: 10px solid goldenrod;
     background-color: wheat;
-    height: 190px;
+    height: 250px;
     width: 500px;
     justify-self: center;
     left:400px
-} */
+}
