--- a/client/src/components/ModifyEvent/modifyevents.css
+++ b/client/src/components/ModifyEvent/modifyevents.css
@@ -1,4 +1,4 @@
-/* .heading {
+.heading {
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -7,4 +7,11 @@
     color: white;
     top: -70px;
  
-} */
+}
+
+.labelfonts {
+  position:relative;
+  top:-90px;
+  font-size:xx-large;
+  left:25px;
+}
