--- a/client/src/components/Signup/signupstyles.css
+++ b/client/src/components/Signup/signupstyles.css
@@ -5,7 +5,7 @@ label {
     left:150px;
   }
 
-.labelfonts {
+.label-parent {
     font-weight: bold;
     color: goldenrod;
     font-size:large
@@ -41,13 +41,12 @@ label {
     position:relative;
     left:180px;
     top:-50px; 
-    left:;
 
   }
    
   .location-signup{
     position:relative;
-    top: -50px;
+    top: 50px;
     background:black
   } 
 
