--- a/client/src/components/Home/styles.css
+++ b/client/src/components/Home/styles.css
@@ -19,7 +19,7 @@
 
 .hero-image {
     position: relative;
-    z-index: -1;
+    /* z-index: -1; */
     left: 50%;
     margin-top: -15%;  
     filter: brightness(1.0);
