--- a/client/src/components/ModifyDancer/mod_styles.css
+++ b/client/src/components/ModifyDancer/mod_styles.css
@@ -1,3 +1,15 @@
-.heading {
-    left:-10px;
+.loc{
+  position:relative;
+  top: 250px;
+
+}
+
+.labelfonts {
+   position:relative;
+   top: 150px;
+}
+
+.form-location{
+    position:relative;
+    top:-55px;
 }
