added some styling to email icon

--- a/client/src/components/Balances/balances.css
+++ b/client/src/components/Balances/balances.css
@@ -3,6 +3,10 @@
     top:170px;
     font-size:large;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    width:750px; 
+    width:800px; 
     background-color:goldenrod;
+}
+
+.table-size {
+    width:768px;
 }
